manifests/docker-registry/registry-backend.yaml
#
# Service
#

apiVersion: v1
kind: Service
metadata:
  name: registry-backend-service
  namespace: docker-registry
spec:
  selector:
    app: registry-backend
  type: LoadBalancer
  ports:
    - name: docker-port
      protocol: TCP
      port: 5000
      targetPort: 5000
  loadBalancerIP: 192.168.0.202

---
#
# Deployment
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-backend
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-backend
  template:
    metadata:
      labels:
        app: registry-backend
        name: registry-backend
    spec:
      nodeSelector:
        node-type: worker
      containers:
        - name: registry-backend
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: lv-storage
              mountPath: /var/lib/registry
              subPath: registry
            - name: certs
              mountPath: /certs
      volumes:
        - name: lv-storage
          persistentVolumeClaim:
            claimName: longhorn-docker-registry-pvc-1
        - name: certs
          secret:
            secretName: docker-registry-tls-cert
